Cycles Normal Bake problem #40023

Closed
opened 2014-05-04 18:02:50 +02:00 by Adriano Oliveira · 13 comments

System Information
Windows 8.1 64 / Nvidia 560 ti 2gb

Blender Version
Broken: 2.70.5 a1ba57a

Short description of error
Cycles Bake normal (tangent or object) inconsiste with BI Bake.

Ortogonal extruded faces produces strange normal angles (BI is correct):

bake-normal.jpg

File:
bake.blend

**System Information** Windows 8.1 64 / Nvidia 560 ti 2gb **Blender Version** Broken: 2.70.5 a1ba57a **Short description of error** Cycles Bake normal (tangent or object) inconsiste with BI Bake. Ortogonal extruded faces produces strange normal angles (BI is correct): ![bake-normal.jpg](https://archive.blender.org/developer/F86911/bake-normal.jpg) File: [bake.blend](https://archive.blender.org/developer/F86913/bake.blend)

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by Adriano Oliveira 2014-05-04 18:02:50 +02:00

Added subscriber: @AdrianoOliveira

Added subscriber: @AdrianoOliveira

It dosn't happen from a plane to other, but it does form a cube to other...
It seams related to the way projection is calculated.

It dosn't happen from a plane to other, but it does form a cube to other... It seams related to the way projection is calculated.

Added subscriber: @AndyDavies-3

Added subscriber: @AndyDavies-3

@AndyDavies-3 could you do me a great favour and bake this in xnormals so I can use as comparison?

@AndyDavies-3 could you do me a great favour and bake this in xnormals so I can use as comparison?

Hey guys,

What you are seeing is correct (if you are using a cage) and xNormal has the same issue.

It's skewing from the bake because the geometry is coarse (very low poly). When baking with a cage the normals are averaged across the length of the surface which can cause the skewing you see here. The only fix is to either use hard edges (which is why BI works because it cant bake without hard edges) or add support loops close to the edges of the mesh which controls the projection better.

http://download.blender.org/documentation/bc2013/andy_davies_Normal_mapping_for_games_and_realtime_content.pdf - Page 51

It's also why projections in closer to the centre of each face show less skewing. :)

test_normals.jpg

test_xn_cage_normals.jpg

Hey guys, What you are seeing is correct (if you are using a cage) and xNormal has the same issue. It's skewing from the bake because the geometry is coarse (very low poly). When baking with a cage the normals are averaged across the length of the surface which can cause the skewing you see here. The only fix is to either use hard edges (which is why BI works because it cant bake without hard edges) or add support loops close to the edges of the mesh which controls the projection better. http://download.blender.org/documentation/bc2013/andy_davies_Normal_mapping_for_games_and_realtime_content.pdf - Page 51 It's also why projections in closer to the centre of each face show less skewing. :) ![test_normals.jpg](https://archive.blender.org/developer/F86962/test_normals.jpg) ![test_xn_cage_normals.jpg](https://archive.blender.org/developer/F86963/test_xn_cage_normals.jpg)

Ok, Fair to me.

But for the sake of compatibility, wouldn't it be batter to mantain the same logic cyclces-BI bake?

Ok, Fair to me. But for the sake of compatibility, wouldn't it be batter to mantain the same logic cyclces-BI bake?

Yes, it would be nice if both BI and Cycles had the ability to use cages as they are a superior way to bake.
Uniform ray distance has so many issues when it comes to baking with hard/sharp edges. :)

Yes, it would be nice if both BI and Cycles had the ability to use cages as they are a superior way to bake. Uniform ray distance has so many issues when it comes to baking with hard/sharp edges. :)

Added subscribers: @dfelinto, @mont29

Added subscribers: @dfelinto, @mont29

@dfelinto this one can be closed then, I guess?

@dfelinto this one can be closed then, I guess?

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

Added subscriber: @brecht

Added subscriber: @brecht

Yes, let's close this.

Yes, let's close this.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40023
No description provided.